# Marisa

./: .gitlab-ci.yml  .gitmodules  .readthedocs.yml  Benchmark.md  CMakeLists.txt  CommonIncludes.hpp  LICENSE  README.md
App/: App.hpp  Context.hpp  Route.hpp
App/Middlewares/: CommonIncludes.hpp  Compression.cpp  Compression.hpp  Redirection.hpp  Simple.cpp  Simple.hpp  StaticFiles.cpp
App/Request/: Request.hpp
App/Response/: Body.hpp  Response.cpp  Response.hpp
Documentation/: mkdocs.yml
Documentation/docs/: Getting Started.md  index.md
Examples/: async_suspend_resume.cpp  dashboard.cpp  hello.cpp  hello_ssl.cpp  hello_streamed.cpp  send_single_file.cpp  static_files.cpp  streamed_upload_pic.cpp  usage_demo.cpp
Log/: Log.cpp
Protocol/HTTP/: Method.cpp  Method.hpp  Parser.hpp  Status.cpp  Status.hpp
Protocol/HTTP/HTTP1/: Generator.cpp  Parser.cpp
Server/: Buffer.cpp  Config.cpp  Config.hpp  ConnectionContext.hpp  Instance.hpp  SessionSSL.cpp  SessionTCP.cpp
Source/: CMakeLists.txt  CommonIncludes.hpp  Marisa.cpp  Marisa.hpp  Version.hpp
Source/App/: App.cpp  App.hpp  Buffer.cpp  Buffer.hpp  Context.cpp  Context.hpp  Middleware.cpp  Middleware.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp  Route.cpp  Route.hpp
Source/App/Middlewares/: CommonIncludes.hpp  Compression.cpp  Compression.hpp  Dashboard.cpp  Dashboard.hpp  Lambda.cpp  Lambda.hpp  Middlewares.hpp  Redirection.cpp  Redirection.hpp  Simple.cpp  Simple.hpp  StaticFiles.cpp  StaticFiles.hpp  Websocket.cpp  Websocket.hpp
Source/App/Request/: Request.cpp  Request.hpp
Source/App/Response/: Body.cpp  Response.cpp  Response.hpp
Source/Examples/: dashboard.cpp  hello.cpp  hello_async.cpp  hello_lambda.cpp  hello_streamed.cpp  raw_io.cpp  send_single_file.cpp  static_files.cpp  streamed_upload_pic.cpp  usage_demo.cpp
Source/Log/: Log.cpp  Log.hpp
Source/Protocol/: Protocol.hpp
Source/Protocol/HTTP/: CommonIncludes.hpp  Generator.hpp  HTTP.hpp  Method.hpp  Parser.cpp  Parser.hpp  Status.hpp
Source/Protocol/HTTP/HTTP1/: Generator.cpp  Generator.hpp  HTTP1.hpp  Parser.hpp
Source/Server/: Buffer.cpp  Buffer.hpp  Instance.hpp  InstanceCommon.cpp  InstanceSSL.cpp  InstanceTCP.cpp  InstanceUnix.cpp  Session.hpp  SessionCommon.cpp  SessionSSL.cpp  SessionTCP.cpp  SessionUnix.cpp
Source/Tests/: coverage.cpp  hello_async.cpp  hello_simple.cpp
Source/Types/: Base64.hpp  Date.hpp  MMap.hpp  Mullet.cpp  Mullet.hpp
Source/Util/: DefaultStatusPage.cpp  JSDate.cpp  MimeTypes.cpp  URLEncode.cpp  Util.cpp  Util.hpp
Source/Utilities/: MimeTypes.cpp  Utilities.cpp  Utilities.hpp
Source/cmake/: Findlibmicrohttpd.cmake
Tests/: coverage.cpp  hello.cpp  hello_async.cpp  hello_lambda.cpp  hello_ssl.cpp  hello_unix_socket.cpp  send_single_file.cpp  static_files.cpp  streamed_upload_pic.cpp  thebenchmarker_webframeworks_test.cpp
Types/: Base64.cpp  Base64.hpp  Date.cpp  MMap.cpp  MMap.hpp  Mullet.hpp
Utilities/: Utilities.hpp
